--- a/AnalyzeApplyExtend/extend/css/extend05.css
+++ b/AnalyzeApplyExtend/extend/css/extend05.css
@@ -1,7 +1,7 @@
-/* 
-Style sheet created by: 
-Student's Name 
-Today's Date 
+/*
+Style sheet created by:
+Student's Name
+Today's Date
 */
 body {
     background-color: #dde3fd;
@@ -23,8 +23,21 @@ body {
 
 /* sticky */
 
+.sticky {
+  position: -webkit-sticky.;
+  position: sticky;
+  top: 0%;
+}
+
 
 /* relative */
+
+.relative {
+  position: relative;
+  top: 90px;
+  left: 30px;
+  
+}
 
 
 /* fixed */
