--- a/AnalyzeApplyExtend/extend/css/extend05.css
+++ b/AnalyzeApplyExtend/extend/css/extend05.css
@@ -36,11 +36,23 @@ body {
   position: relative;
   top: 90px;
   left: 30px;
-  
+
 }
 
 
 /* fixed */
 
+.fixed{
+  position:fixed;
+  top: 90px;
+  right: 10px;
+
+}
+
 
 /* absolute */
+
+.Absolute{
+  position: absolute;
+  bottom: 0; right: 0;
+}
